	* implemented AgsPositionAutomationCursor
	* refactored AgsApplySynth to use ags_synth_generator_compute_extended()
	* refactored ags_syncsynth_update() and ags_synth_update() to apply triple sync
	* refactored AgsOscillator to have triple sync
	* refactored AgsOscillator persistence in ags_simple_file.c
	* refactored ags_oscillator_disconnect() to use g_object_disconnect()

ags (1.0.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* extended documentation of libags and libags-audio to have comments for enums
	* fixed missing xinclude

ags (1.0.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ags-prepare recall related gtk-doc
	* fixed all interfaces to name inherited type field ginterface instead of interface
	* fixed gtk-doc fixup to do sed using globbing
	* fixed following additional / by gtk-doc fixup

ags (1.0.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed possible SIGSEGV in ags_synth_generator_compute_with_audio_signal()
	* fixed missing includes of stdlib.h
	* fixed user's handbook removed unneeded column in tables

ags (1.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing screenshots to tarball

ags (1.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved max-precision configuration preferences to proper reset
	* improved ags_notebook_size_request() to always use -1 as requisition width
	* improved AgsRampAccelerationDialog to use 2 digits after decimal point
	* improved AgsSelectAccelerationDialog to use 2 digits after decimal point
	* extended user's manual and replaced all screenshots
	* added section "Envelope editor" to chapter 2
	* added section "Envelope info" to chapter 2
	* added section "Envelope pattern" to chapter 2
	* added section "Move notes" to chapter 3
	* added section "Crop notes" to chapter 3
	* added section "Select notes" to chapter 3
	* added section "Select acceleration" to chapter 5