@@ -90,6 +90,8 @@ widget_class "AgsSelectNoteDialog*" style "main_window"
 widget_class "AgsMoveAccelerationDialog*" style "main_window"
 widget_class "AgsSelectAccelerationDialog*" style "main_window"
 widget_class "AgsRampAccelerationDialog*" style "main_window"
+widget_class "AgsPositionNotationCursorDialog*" style "main_window"
+widget_class "AgsPositionAutomationCursorDialog*" style "main_window"
 widget_class "AgsConnectionEditor*" style "main_window"
 widget_class "AgsMachineSelection*" style "main_window"
 widget_class "AgsPluginBrowser*" style "main_window"
